--- a/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
+++ b/app/locale/de_DE/LC_MESSAGES/lorry-de_DE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lorry\n"
 "POT-Creation-Date: 2014-11-16 13:53+0100\n"
-"PO-Revision-Date: 2014-11-16 13:53+0100\n"
+"PO-Revision-Date: 2014-11-17 09:26+0100\n"
 "Last-Translator: Benedict Etzel <developer@beheh.de>\n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -1669,7 +1669,7 @@ msgid ""
 "has a version number, a detailed description and tracks the actual files."
 msgstr ""
 "Die Erweiterung speichert grundlegende Informationen, wie den Titel, eine "
-"Einführung und zu welchem Spiel sie gehört. Du kannst dann eienn Release für "
+"Einführung und zu welchem Spiel sie gehört. Du kannst dann einen Release für "
 "die Erweiterung erstellen, welcher die Versionsnummer, eine ausführliche "
 "Beschreibung und die eigentlichen Dateien speichert."
 
